--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,21 @@
-
+{
+  "name": "My Journal",
+  "short_name": "Journal",
+  "start_url": "/Journal/",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#3367D6",
+  "orientation": "portrait",
+  "icons": [
+    {
+      "src": "icon-192.png",   // ✅ No 'icons/' folder
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-512.png",   // ✅ No 'icons/' folder
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
+}
